--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
 
         <section id="main_content">
           <h3>
+<a id="reference" class="anchor" href="#reference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reference</h3>
+
+<p>W.-L. Wang and J.-H. Chuang, "SPARK-facedetection: Scalability, Pricing And Robustness benchmarK for Face Detection," <em>Technical Report, Dept. of Computer Science, National Chiao Tung University, Hsinchu, Taiwan</em>, 2016.</p>
+
+<p>BibTeX entry:
+    @TechReport{fddbTech,
+      author      = {W.-L. Wang and J.-H. Chuang},
+      title       = {SPARK-facedetection: Scalability, Pricing And Robustness benchmarK for Face Detection},
+      institution = {Dept. of Computer Science, National Chiao Tung University},
+      address     = {Hsinchu, Taiwan},
+      year        = {2016},
+    }</p>
+
+<h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
