--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
 
 <p>W.-L. Wang and J.-H. Chuang, "SPARK-facedetection: Scalability, Pricing And Robustness benchmarK for Face Detection," <em>Technical Report, Dept. of Computer Science, National Chiao Tung University, Hsinchu, Taiwan</em>, 2016.</p>
 
-<p>BibTeX entry:
-    @TechReport{fddbTech,
-      author      = {W.-L. Wang and J.-H. Chuang},
-      title       = {SPARK-facedetection: Scalability, Pricing And Robustness benchmarK for Face Detection},
-      institution = {Dept. of Computer Science, National Chiao Tung University},
-      address     = {Hsinchu, Taiwan},
-      year        = {2016},
-    }</p>
+<p>BibTeX entry:</p>
+
+<pre><code>@TechReport{fddbTech,
+  author      = {W.-L. Wang and J.-H. Chuang},
+  title       = {SPARK-facedetection: Scalability, Pricing And Robustness benchmarK for Face Detection},
+  institution = {Dept. of Computer Science, National Chiao Tung University},
+  address     = {Hsinchu, Taiwan},
+  year        = {2016},
+}
+</code></pre>
 
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
