Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -36,14 +36,19 @@
 
 <p>BibTeX entry:</p>
 
-<pre><code>@TechReport{fddbTech,
+<pre><code>@TechReport{wang16,
   author      = {W.-L. Wang and J.-H. Chuang},
-  title       = {SPARK-facedetection: Scalability, Pricing And Robustness benchmarK for Face Detection},
+  title       = {{SPARK}-facedetection: {Scalability, Pricing And Robustness benchmarK} for Face Detection},
   institution = {Dept. of Computer Science, National Chiao Tung University},
   address     = {Hsinchu, Taiwan},
   year        = {2016},
 }
 </code></pre>
+
+<h3>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
+
+<p><a href="sparkfacedetection@gmail.com">sparkfacedetection@gmail.com</a></p>
 
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
