Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 }
 </code></pre>
 
-<p>Citing is caring!</p>
+<p>Citing is caring ^^</p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>[<a href="mailto:sparkfacedetection@gmail.com">sparkfacedetection@gmail.com</a>]</p>
+<p><a href="mailto:sparkfacedetection@gmail.com">sparkfacedetection@gmail.com</a></p>
 
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
