Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 }
 </code></pre>
 
+<p>Citing is caring ^^</p>
+
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
 
