Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>SPARK-facedetection</h1>
-          <h2>Scalability, Pricing And Robustness benchmarK for Face Detection</h2>
+          <h2>Scalability, Pricing And Robustness benchmarK for face detection</h2>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -29,61 +29,22 @@
         <hr>
 
         <section id="main_content">
-          <h1>
-<a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h1>
+          <h3>
+<a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h3>
 
-<h1>
-<a id="scalability" class="anchor" href="#scalability" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Scalability</h1>
+<h3>
+<a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h3>
 
-<h2>
-<a id="maximum-number-of-detected-faces" class="anchor" href="#maximum-number-of-detected-faces" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Maximum Number of Detected Faces</h2>
+<h3>
+<a id="reference" class="anchor" href="#reference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reference</h3>
 
-<table>
-<thead>
-<tr>
-<th>Tables</th>
-<th align="center">Are</th>
-<th align="right">Cool</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>col 1 is</td>
-<td align="center">left-aligned</td>
-<td align="right">$1600</td>
-</tr>
-<tr>
-<td>col 2 is</td>
-<td align="center">centered</td>
-<td align="right">$12</td>
-</tr>
-<tr>
-<td>col 3 is</td>
-<td align="center">right-aligned</td>
-<td align="right">$1</td>
-</tr>
-</tbody>
-</table>
-
-<h1>
-<a id="pricing" class="anchor" href="#pricing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pricing</h1>
-
-<h1>
-<a id="robustness" class="anchor" href="#robustness" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Robustness</h1>
-
-<h2>
-<a id="against-yawpitchroll" class="anchor" href="#against-yawpitchroll" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Against Yaw/Pitch/Roll</h2>
-
-<h1>
-<a id="reference" class="anchor" href="#reference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reference</h1>
-
-<p>W.-L. Wang and J.-H. Chuang, "SPARK-facedetection: Scalability, Pricing And Robustness benchmarK for Face Detection," <em>Technical Report, Dept. of Computer Science, National Chiao Tung University, Hsinchu, Taiwan</em>, 2016.</p>
+<p>W.-L. Wang and J.-H. Chuang, "SPARK-facedetection: Scalability, Pricing And Robustness benchmarK for face detection," <em>Technical Report, Dept. of Computer Science, National Chiao Tung University, Hsinchu, Taiwan</em>, 2016.</p>
 
 <p>BibTeX entry:</p>
 
 <pre><code>@TechReport{wang16,
   author      = {W.-L. Wang and J.-H. Chuang},
-  title       = {{SPARK}-facedetection: {Scalability, Pricing And Robustness benchmarK} for Face Detection},
+  title       = {{SPARK}-facedetection: scalability, pricing and robustness benchmark for face detection},
   institution = {Dept. of Computer Science, National Chiao Tung University},
   address     = {Hsinchu, Taiwan},
   year        = {2016},
@@ -92,24 +53,19 @@
 
 <p>Citing is caring ^^</p>
 
-<h1>
-<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h1>
+<h3>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
 
-<p><a href="mailto:weblinkwang@gmail.com">weblinkwang@gmail.com</a></p>
+<p>Wei-Lin Wang <a href="mailto:weblinkwang@gmail.com">weblinkwang@gmail.com</a></p>
 
-<h1>
-<a id="face-detection-software" class="anchor" href="#face-detection-software" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Face Detection Software</h1>
+<h3>
+<a id="resources" class="anchor" href="#resources" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Resources</h3>
 
-<h2>
-<a id="standalone" class="anchor" href="#standalone" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Standalone</h2>
+<p>Face Detection Software
+Standalone
+<a href="http://www.acsysbiometrics.com/">Acsys</a></p>
 
-<p>| <a href="http://www.acsysbiometrics.com/">Acsys</a>    |      Are      |  Cool |
-| col 1 is                                    |  left-aligned | $1600 |
-| col 2 is                                    |    centered   |   $12 |
-| col 3 is                                    | right-aligned |    $1 |</p>
-
-<h2>
-<a id="web-service" class="anchor" href="#web-service" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Web Service</h2>
+<p>Web Service</p>
         </section>
 
         <footer>
