Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h3>
 <a id="reference" class="anchor" href="#reference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reference</h3>
 
-<p>W.-L. Wang and J.-H. Chuang, "SPARK-facedetection: Scalability, Pricing And Robustness benchmarK for face detection," <em>Technical Report, Dept. of Computer Science, National Chiao Tung University, Hsinchu, Taiwan</em>, 2016.</p>
+<p>W.-L. Wang and J.-H. Chuang, "SPARK-facedetection: scalability, pricing and robustness benchmark for face detection," <em>Technical Report, Dept. of Computer Science, National Chiao Tung University, Hsinchu, Taiwan</em>, 2016.</p>
 
 <p>BibTeX entry:</p>
 
