Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>Wei-Lin Wang <a href="mailto:weblinkwang@gmail.com">weblinkwang@gmail.com</a></p>
+<p>Wei-Lin Wang - <a href="mailto:weblinkwang@gmail.com">weblinkwang@gmail.com</a></p>
 
 <h3>
 <a id="resources" class="anchor" href="#resources" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Resources</h3>
