Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
           <h3>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h3>
 
+<p>separate
+labeled faces in the wild database
+while "labeled faces in the lab" more suitable for evaluating video surveillance since
+surveillance camera certain scene.</p>
+
 <h3>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h3>
 
