Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,15 +32,25 @@
           <h3>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h3>
 
-<p>Labeled Faces in the Wild database
-unconstrained settings
-precision and recall
-constrained settings (good enough), precision and recall, optimize budget</p>
+<p>FDDB and MALF
+benchmark for face detection in the wild (in unconstrained settings)
+evaluation criterion precision and recall
+while face detection in the lab
+constrained settings scalability robustness,
+face detection in the use
+precision and recall, evaluation criterion price
+customization result.</p>
 
-<p>while "labeled faces in the lab" more suitable for evaluating 
-indoor video surveillance since
-surveillance camera certain scene.
-however, not available.</p>
+<p>optimized for video surveillance
+scalability on number of detected faces - crowd surveillance
+robustness against small face size - large scale video surveillance
+against yaw/pitch/roll - head pose estimation
+against occlusion - access control
+against low light - nighttime surveillance</p>
+
+<p>most comprehensive benchmark for face detection in the lab (total 9)
+most comprehensive benchmark for face detection in the use (total 25)
+most comprehensive list for commercialized face detection (total 75)</p>
 
 <h3>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h3>
