Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,19 +32,20 @@
           <h3>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h3>
 
-<p><a href="http://vis-www.cs.umass.edu/fddb/">FDDB</a> and <a href="http://www.cbsr.ia.ac.cn/faceevaluation/">MALF</a> benchmarks for face detection in the wild (in unconstrained settings).
-On benchmark for face detection in the lab (in constrained settings, e.g. constrained scalability and robustness) always,
+<p><a href="http://vis-www.cs.umass.edu/fddb/">FDDB</a> and <a href="http://www.cbsr.ia.ac.cn/faceevaluation/">MALF</a> are benchmarks for face detection in the wild (in unconstrained settings).
+On benchmarks for face detection in the lab (in constrained settings, such as constrained scalability and robustness) always,
 both evaluation criterion precision and recall.
 benchmark for face detection in the use
 (in constrained precision and recall), evaluation criterion price
-scalability on the number of detected faces and robustness against small face size, yaw/pitch/roll, facial expression, occlusion, shadow.</p>
+scalability on the number of detected faces and robustness against small face size, yaw/pitch/roll, facial expression, occlusion, shadow.
+We </p>
 
 <ol>
-<li>most comprehensive collection of benchmarks for face detection in the lab and face detection in the use (8 benchmarks), and</li>
-<li>most comprehensive list of commercialized face detection (total 61).</li>
+<li>the most comprehensive collection of benchmarks for face detection in the lab and face detection in the use (8 benchmarks), and</li>
+<li>the most comprehensive list of commercialized face detection (total 61).</li>
 </ol>
 
-<p>face detection.</p>
+<p>This could help people purchase face detection.</p>
 
 <h3>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h3>
