Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ We </p>
 
 <pre><code>@TechReport{wang16,
   author      = {W.-L. Wang and J.-H. Chuang},
-  title       = {{SPARK}-facedetection: scalability, pricing and robustness benchmark for face detection},
+  title       = {{SPARK}: scalability, pricing and robustness benchmark for face detection},
   institution = {Dept. of Computer Science, National Chiao Tung University},
   address     = {Hsinchu, Taiwan},
   year        = {2016},
