--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <hr>
 
         <section id="main_content">
-          <h3>
+          <p>import Chart from 'src/chart.js'</p>
+
+<h3>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h3>
 
 <p><a href="http://vis-www.cs.umass.edu/fddb/">FDDB</a> and <a href="http://www.cbsr.ia.ac.cn/faceevaluation/">MALF</a> are benchmarks for face detection in the wild (in unconstrained settings).
