Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ We </p>
 }
 </code></pre>
 
-<p>Citing is caring ^^</p>
+<p>Citing is caring <g-emoji alias="+1" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f44d.png">👍</g-emoji></p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
