Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <hr>
 
         <section id="main_content">
-          <pre><code></code></pre>
+          <p>src="<a href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.js">https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.js</a>"</p>
 
 <h3>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h3>
@@ -52,12 +52,10 @@ We </p>
 <h3>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h3>
 
-<pre><code>
+<p>
+</p>
 
 
-
-
-</code></pre>
 
 <h3>
 <a id="reference" class="anchor" href="#reference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reference</h3>
