--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <title>SPARK-facedetection by spark-facedetection</title>
+    <script>src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.js"</script>
   </head>
 
   <body>
