--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h3>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h3>
 
-<p>Existing benchmarks for face detection in the wild (in unconstrained settings),
+<p>Existing benchmarks for face detection in the wild (in unconstrained settings), e.g.
 <a href="http://vis-www.cs.umass.edu/fddb/results.html">FDDB</a> and <a href="http://www.cbsr.ia.ac.cn/faceevaluation/results.html">MALF</a>,
 are good for compare face detection.
 On benchmarks for face detection in the lab (in constrained settings, such as constrained scalability and robustness) always,
