--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p>Existing benchmarks for face detection in the wild (in unconstrained settings), e.g.
 <a href="http://vis-www.cs.umass.edu/fddb/results.html">FDDB</a> and <a href="http://www.cbsr.ia.ac.cn/faceevaluation/results.html">MALF</a>,
 are good for compare face detection.
-On benchmarks for face detection in the lab (in constrained settings, such as constrained scalability and robustness) always,
+On benchmarks for face detection in the lab (in constrained scalability and robustness) always,
 both evaluation criterion precision and recall.
 benchmark for face detection in the use
 (in constrained precision and recall), evaluation criterion price
