--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ We </p>
 <li>the most comprehensive list of commercialized face detection (total 62).</li>
 </ol>
 
-<p>This could help people purchase face detection.</p>
+<p>This could benefit face detection buyers' buying decision process and cost &mdash benefit analysis</p>
 
 <h3>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h3>
