--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
 <p>Existing benchmarks for face detection in the wild (in unconstrained settings), e.g.
 <a href="http://vis-www.cs.umass.edu/fddb/results.html">FDDB</a> and <a href="http://www.cbsr.ia.ac.cn/faceevaluation/results.html">MALF</a>,
 are good for compare face detection.
-On benchmarks for face detection in the lab (in constrained scalability and robustness) always,
+While no less important, there is a lack of benchmark for face detection in the lab (in constrained scalability and robustness),
 both evaluation criterion precision and recall.
-benchmark for face detection in the use
+benchmark for face detection in the purchasing process
 (in constrained precision and recall), evaluation criterion price
 scalability on the number of detected faces and robustness against small face size, yaw/pitch/roll, facial expression, occlusion, shadow.
 We </p>
 
 <ol>
-<li>the most comprehensive collection of benchmarks for face detection in the lab and face detection in the use (8 benchmarks), and</li>
+<li>the most comprehensive collection of benchmarks for face detection in the lab (8 benchmarks) and , and</li>
 <li>the most comprehensive list of commercialized face detection (total 62).</li>
 </ol>
 
-<p>This could benefit face detection buyers' buying decision process and cost&ndash;benefit analysis</p>
+<p>This could benefit face detection buyers' buying decision process and cost&ndash;benefit analysis.</p>
 
 <h3>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h3>
