--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ scalability on the number of detected faces and robustness against small face si
 We </p>
 
 <ol>
-<li>the most comprehensive collection of benchmarks for face detection in the lab (8 benchmarks) and , and</li>
+<li>the most comprehensive collection of benchmarks for face detection in the lab and purchasing process (8 benchmarks), and</li>
 <li>the most comprehensive list of commercialized face detection (total 62).</li>
 </ol>
 
