--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <p>Existing benchmarks for face detection in the wild (in unconstrained settings), e.g.
 <a href="http://vis-www.cs.umass.edu/fddb/results.html">FDDB</a> and <a href="http://www.cbsr.ia.ac.cn/faceevaluation/results.html">MALF</a>,
 are good for compare face detection.
+precision and recall relative to each other.
 While no less important, there is a lack of benchmark for face detection in the lab (in constrained scalability and robustness),
 both evaluation criterion precision and recall.
 benchmark for face detection in the purchasing process
@@ -46,7 +47,7 @@ scalability on the number of detected faces and robustness against small face si
 We </p>
 
 <ol>
-<li>the most comprehensive collection of benchmarks for face detection in the lab and purchasing process (8 benchmarks), and</li>
+<li>the most comprehensive collection of benchmarks for face detection in the lab and in the purchasing process (8 benchmarks), and</li>
 <li>the most comprehensive list of commercialized face detection (total 62).</li>
 </ol>
 
