--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
 
 <p>Existing benchmarks for face detection in the wild (in unconstrained settings), e.g.
 <a href="http://vis-www.cs.umass.edu/fddb/results.html">FDDB</a> and <a href="http://www.cbsr.ia.ac.cn/faceevaluation/results.html">MALF</a>,
-are good for compare face detection.
-precision and recall relative to each other.
-While no less important, there is a lack of benchmark for face detection in the lab (in constrained scalability and robustness),
-both evaluation criterion precision and recall.
-benchmark for face detection in the purchasing process
-(in constrained precision and recall), evaluation criterion price
-scalability on the number of detected faces and robustness against small face size, yaw/pitch/roll, facial expression, occlusion, shadow.
-We </p>
+assess the true positive rate (TPR) of face detection methods relative to each other.
+On the other hand, neither is there a benchmark for face detection in the lab (in constrained settings)
+that constrains the TPR and assesses the scalability and robustness,
+nor is there a benchmark for face detection in the purchasing process
+that constrains the TPR, scalability and robustness then assesses the pricing.
+The benchmark for face detection in the lab assesses
+the scalability on the number of detected faces (true positives) and
+the robustness against small face size, yaw/pitch/roll, facial expression, occlusion, shadow.
+This is to date</p>
 
 <ol>
 <li>the most comprehensive collection of benchmarks for face detection in the lab and in the purchasing process (8 benchmarks), and</li>
