--- a/index.html
+++ b/index.html
@@ -104,12 +104,13 @@ var myChart = new Chart(ctx, {
 <h3>
 <a id="reference" class="anchor" href="#reference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reference</h3>
 
-<p>W.-L. Wang and J.-H. Chuang, "SPARK: scalability, pricing and robustness benchmark for face detection," <em>Technical Report, Dept. of Computer Science, National Chiao Tung University, Hsinchu, Taiwan</em>, 2016.</p>
+<p>Wei-Lin Wang and Jen-Hui Chuang, "SPARK: scalability, pricing and robustness benchmark for face detection," <em>Technical Report, Dept. of Computer Science, National Chiao Tung University, Hsinchu, Taiwan</em>, 2016.</p>
+<!--I don't abbreviate our forename in the reference since the website has no space limitation like that of the conference papers.-->
 
 <p>BibTeX entry:</p>
 
 <pre><code>@TechReport{wang16,
-  author      = {W.-L. Wang and J.-H. Chuang},
+  author      = {Wei-Lin Wang and Jen-Hui Chuang},
   title       = {{SPARK}: scalability, pricing and robustness benchmark for face detection},
   institution = {Dept. of Computer Science, National Chiao Tung University},
   address     = {Hsinchu, Taiwan},
@@ -132,6 +133,13 @@ var myChart = new Chart(ctx, {
 <p>Face detection web services (total 24): <a href="http://www.allgovision.com/face-recognition.php">AllGo Embed. Sys.</a>, <a href="http://www.authenmetric.com/">AuthenMetric</a>, <a href="http://apistore.baidu.com/apiworks/servicedetail/464.html">Baidu</a>, <a href="http://www.betafaceapi.com/">Betaface</a>, <a href="https://playground.bioid.com/">BioID</a>, <a href="http://www.cloudwalk.cn/">CloudWalk</a>, <a href="http://emovu.com/e/developers/">Eyeris</a>, <a href="http://www.faceplusplus.com/">Face++</a>, <a href="http://www.faceall.cn/">Faceall</a>, <a href="http://www.facerapp.com/">FaceR</a>, <a href="http://apicloud.me/apis/facerect/demo/">FaceRect</a>, <a href="http://www.facevisa.com/">Facevisa</a>, <a href="http://www.lambdal.com/">Lambda Labs</a>, <a href="https://cloud.google.com/vision/">Google</a>, <a href="https://www.kairos.com/face-recognition-api">Kairos</a>, <a href="https://developers.keylemon.com/documentation/reference">KeyLemon</a>, <a href="https://www.linkface.cn/">Linkface SDK</a>, <a href="http://www.meerkat.com.br/solution_fr.html">Meerkat</a>, <a href="https://www.microsoft.com/cognitive-services/en-us/face-api">Microsoft</a>, <a href="http://www.nviso.ch/">nViso</a>, <a href="http://www.oddcast.com/dev/facedetectionAPI/">Oddcast</a>, <a href="https://skybiometry.com/">SkyBiometry</a>, <a href="https://developer.stupeflix.com/tasks/image.face/">Stupefix</a>, <a href="https://open.youtu.qq.com/">Tencent</a>, <a href="http://www.visionlabs.ru/">VisionLabs</a>.</p>
 
 <p>Datasets and benchmarks: <a href="https://data.vision.ee.ethz.ch/cvl/aess/dataset/">A. Ess</a>, <a href="http://www.vision.caltech.edu/Image_Datasets/CaltechPedestrians/">Caltech</a>, <a href="http://vision.ucsd.edu/%7Eiskwak/ExtYaleDatabase/ExtYaleB.html">Ext. Yale B</a>, <a href="http://vis-www.cs.umass.edu/fddb/">FDDB</a>, <a href="http://pascal.inrialpes.fr/data/human/">INRIA</a>, <a href="http://vis-www.cs.umass.edu/lfw/">LFW</a>, <a href="http://www.cbsr.ia.ac.cn/faceevaluation/">MALF</a>, <a href="https://sites.google.com/site/miirsurveillance/">MI3</a>, <a href="http://robotics.csie.ncku.edu.tw/Databases/FaceDetect_PoseEstimate.htm">NCKU Robotics Lab</a>, <a href="http://www-prima.inrialpes.fr/Pointing04/data-face.html">Pointing'04</a>, <a href="http://www.scface.org/">SCface</a>, <a href="http://atvs.ii.uam.es/scfacedb_landmarks.html">SCfaceDB</a>, <a href="http://mmlab.ie.cuhk.edu.hk/projects/WIDERFace/">WIDER FACE</a>.</p>
+
+<!--I don't abbreviate the authors' forename in the reference since the website has no space limitation like that of the conference papers.-->
+<p>Vidit Jain and Erik Learned-Miller, "FDDB: A Benchmark for Face Detection in Unconstrained Settings,"
+Technical Report UM-CS-2010-009, Dept. of Computer Science, University of Massachusetts, 2010. </p>
+
+<p>Bin Yang, Junjie Yan, Zhen Lei and Stan Z. Li., "Fine-grained Evaluation on Face Detection in the Wild,"
+Proceedings of the 11th IEEE International Conference on Automatic Face and Gesture Recognition Conference and Workshops.</p>
         </section>
 
         <footer>
