--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@ var myChart = new Chart(ctx, {
 
 <p>Datasets and benchmarks: <a href="https://data.vision.ee.ethz.ch/cvl/aess/dataset/">A. Ess</a>, <a href="http://www.vision.caltech.edu/Image_Datasets/CaltechPedestrians/">Caltech</a>, <a href="http://vision.ucsd.edu/%7Eiskwak/ExtYaleDatabase/ExtYaleB.html">Ext. Yale B</a>, <a href="http://vis-www.cs.umass.edu/fddb/">FDDB</a>, <a href="http://pascal.inrialpes.fr/data/human/">INRIA</a>, <a href="http://vis-www.cs.umass.edu/lfw/">LFW</a>, <a href="http://www.cbsr.ia.ac.cn/faceevaluation/">MALF</a>, <a href="https://sites.google.com/site/miirsurveillance/">MI3</a>, <a href="http://robotics.csie.ncku.edu.tw/Databases/FaceDetect_PoseEstimate.htm">NCKU Robotics Lab</a>, <a href="http://www-prima.inrialpes.fr/Pointing04/data-face.html">Pointing'04</a>, <a href="http://www.scface.org/">SCface</a>, <a href="http://atvs.ii.uam.es/scfacedb_landmarks.html">SCfaceDB</a>, <a href="http://mmlab.ie.cuhk.edu.hk/projects/WIDERFace/">WIDER FACE</a>.</p>
 
+<h3>
+<a id="references" class="anchor" href="#references" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>References</h3>
+
 <!--I don't abbreviate the authors' forename in the reference since the website has no space limitation like that of the conference papers.-->
 <p>Vidit Jain and Erik Learned-Miller, "FDDB: A Benchmark for Face Detection in Unconstrained Settings,"
 Technical Report UM-CS-2010-009, Dept. of Computer Science, University of Massachusetts, 2010. </p>
