--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ var myChart = new Chart(ctx, {
 
 <!--I don't abbreviate the authors' forename in the reference since the website has no space limitation like that of the conference papers.-->
 <p>Vidit Jain and Erik Learned-Miller, "FDDB: A Benchmark for Face Detection in Unconstrained Settings,"
-<em>Technical Report UM-CS-2010-009, Dept. of Computer Science, University of Massachusetts</em>, 2010. </p>
+<em>Technical Report UM-CS-2010-009, Dept. of Computer Science, University of Massachusetts, Amherst</em>, 2010. </p>
 
 <p>Bin Yang, Junjie Yan, Zhen Lei and Stan Z. Li., "Fine-grained Evaluation on Face Detection in the Wild,"
 <em>Proceedings of the 11th IEEE International Conference on Automatic Face and Gesture Recognition Conference and Workshops</em>, 2015.</p>
