--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ var myChart = new Chart(ctx, {
 <h3>
 <a id="reference" class="anchor" href="#reference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reference</h3>
 
-<p>Wei-Lin Wang and Jen-Hui Chuang, "SPARK: scalability, pricing and robustness benchmark for face detection," <em>Technical Report, Dept. of Computer Science, National Chiao Tung University, Hsinchu, Taiwan</em>, 2016.</p>
+<p>Wei-Lin Wang and Jen-Hui Chuang, "SPARK: scalability, pricing and robustness benchmark for face detection," <em>Technical Report, Dept. of Computer Science, National Chiao Tung University, Taiwan</em>, 2016.</p>
 <!--I don't abbreviate our forename in the reference since the website has no space limitation like that of the conference papers.-->
 
 <p>BibTeX entry:</p>
@@ -113,7 +113,7 @@ var myChart = new Chart(ctx, {
   author      = {Wei-Lin Wang and Jen-Hui Chuang},
   title       = {{SPARK}: scalability, pricing and robustness benchmark for face detection},
   institution = {Dept. of Computer Science, National Chiao Tung University},
-  address     = {Hsinchu, Taiwan},
+  address     = {Taiwan},
   year        = {2016},
 }
 </code></pre>
