--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@ var myChart = new Chart(ctx, {
         }]
     },
     options: {
+        title: {
+            display: true,
+            text: 'Pricing for Standalone Software'
+        }
         scales: {
             yAxes: [{
                 ticks: {
