--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ This is to date</p>
 <script>
 var ctx = document.getElementById("myChart");
 var myChart = new Chart(ctx, {
-    type: 'bar',
+    type: 'horizontalBar',
     data: {
         labels: ["Ayonix", "Noldus", "Eyedea", "Tastenkunst", "CCV", "CLandmark", "Deep Face Representation", "Dlib", "libface",
         "libfacedetection", "M. Hammond", "OpenBR", "OpenCV", "OpenFace", "OpenIMAJ", "Semantic Vision Tech.", "Visual Geometry Group"],
