--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@ This is to date</p>
 <h3>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h3>
 
-<canvas id="one_time_fee" width="400" height="400"></canvas>
+<canvas id="one_time_charge" width="400" height="400"></canvas>
 <script>
-var ctx = document.getElementById("one_time_fee");
+var ctx = document.getElementById("one_time_charge");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["Ayonix", "Noldus", "Eyedea", "Tastenkunst", "Baidu", "CCV", "CLandmark", "Deep Face Representation", "Dlib",
-          "FaceRect", "libface", "libfacedetection", "M. Hammond", "OpenBR", "OpenCV", "OpenFace", "OpenIMAJ", "Semantic Vision Tech.",
-          "Visual Geometry Group"],
+        labels: ["Ayonix", "Noldus", "Eyedea (Plan A)", "Eyedea (Plan B)", "Eyedea (Plan C)", "Eyedea (Plan D)", "Eyedea (Plan E)",
+        "Eyedea (Plan F)", "Tastenkunst", "Baidu", "CCV", "CLandmark", "Deep Face Representation", "Dlib", "FaceRect", "libface",
+        "libfacedetection", "M. Hammond", "OpenBR", "OpenCV", "OpenFace", "OpenIMAJ", "Semantic Vision Tech.", "Visual Geometry Group"],
         datasets: [{
-            label: 'Minimum One-time Fee (USD)',
-            data: [25000, 7434.024, 998.79, 2.22, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+            label: 'One-time Charge (USD)',
+            data: [25000, 7434.024, 1032.19, 998.79, 443.32, 410.11, 254.44, 221.10, 2.22, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
                 'rgba(54, 162, 235, 0.2)',
@@ -88,7 +88,12 @@ var myChart = new Chart(ctx, {
                 'rgba(75, 192, 192, 0.2)',
                 'rgba(153, 102, 255, 0.2)',
                 'rgba(255, 159, 64, 0.2)',
-                'rgba(255, 99, 132, 0.2)'
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
             ],
             borderColor: [
                 'rgba(255,99,132,1)',
@@ -109,7 +114,12 @@ var myChart = new Chart(ctx, {
                 'rgba(75, 192, 192, 1)',
                 'rgba(153, 102, 255, 1)',
                 'rgba(255, 159, 64, 1)',
-                'rgba(255,99,132,1)'
+                'rgba(255,99,132,1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
             ],
             borderWidth: 1
         }]
@@ -130,16 +140,16 @@ var myChart = new Chart(ctx, {
 });
 </script>
 
-<canvas id="subscription_fee" width="400" height="400"></canvas>
+<canvas id="monthly_charge" width="400" height="400"></canvas>
 <script>
-var ctx = document.getElementById("subscription_fee");
+var ctx = document.getElementById("monthly_charge");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
         labels: ["Affectiva", "Eyedea", "PUX", ""],
         datasets: [{
-            label: 'USD',
-            data: [25000, 7434.024, 998.79, 2.22, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+            label: 'Monthly Charge (USD)',
+            data: [250, 7434.024, 998.79, 2.22, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
                 'rgba(54, 162, 235, 0.2)',
@@ -184,7 +194,7 @@ var myChart = new Chart(ctx, {
     options: {
         title: {
             display: true,
-            text: 'One-time Fee'
+            text: 'Monthly Charge'
         },
         scales: {
             yAxes: [{
